// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorPreview Snapshots renders as expected 1`] = `
.emotion-6 span {
  color: #494949;
}

.emotion-5 {
  position: relative;
}

.emotion-2 {
  display: inline-block;
  position: relative;
}

.emotion-1 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  border: 1px solid #7b858f;
  display: block;
  background-color: #ffffff;
  border-radius: 4px;
  box-sizing: border-box;
  height: 40px;
  min-width: 280px;
  -webkit-transition: 0.2s box-shadow,0.2s border-color;
  transition: 0.2s box-shadow,0.2s border-color;
  padding: 8px;
  box-sizing: border-box;
  padding-left: 46px;
  min-width: 116px;
  width: 116px;
  background-color: #f0f1f2;
  pointer-events: none;
}

.emotion-1::-webkit-input-placeholder {
  color: #5e6a75;
}

.emotion-1::-moz-placeholder {
  color: #5e6a75;
}

.emotion-1:-ms-input-placeholder {
  color: #5e6a75;
}

.emotion-1::placeholder {
  color: #5e6a75;
}

.emotion-1:hover {
  border-color: #333d47;
}

.emotion-1:focus:not([disabled]) {
  border-color: #0875e1;
  box-shadow: inset 0 0 0 1px #0875e1;
  outline: none;
}

.emotion-1:disabled {
  background-color: #f6f7f8;
  border-color: #b9c0c7;
  color: #a1aab3;
}

.emotion-1:disabled::-webkit-input-placeholder {
  color: #a1aab3;
}

.emotion-1:disabled::-moz-placeholder {
  color: #a1aab3;
}

.emotion-1:disabled:-ms-input-placeholder {
  color: #a1aab3;
}

.emotion-1:disabled::placeholder {
  color: #a1aab3;
}

.emotion-1:disabled {
  background-color: #ffffff;
  border-color: #ffffff;
  color: #494949;
}

.emotion-1:disabled::-webkit-input-placeholder {
  color: #494949;
}

.emotion-1:disabled::-moz-placeholder {
  color: #494949;
}

.emotion-1:disabled:-ms-input-placeholder {
  color: #494949;
}

.emotion-1:disabled::placeholder {
  color: #494949;
}

.emotion-3 {
  position: absolute;
  cursor: pointer;
  height: 20px;
  width: 20px;
  top: 0px;
  bottom: 0px;
  left: 8px;
  margin: auto;
  box-shadow: inset 0 0 0 1px rgba(0,0,0,0.25);
  pointer-events: none;
  border-radius: 2px;
}

.emotion-4 {
  position: absolute;
  left: 36px;
  top: 10px;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #5e6a75;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  color: #a1aab3;
}

<div
  className="emotion-6 emotion-7"
>
  <div
    className="emotion-5"
  >
    <div
      className="emotion-2"
    >
      <input
        className="emotion-0 emotion-1"
        disabled={true}
        maxLength={7}
        onChange={[Function]}
        placeholder="FFFFFF"
        spellCheck={false}
        type="text"
        value=""
      />
    </div>
    <div
      className="emotion-3"
      style={
        Object {
          "backgroundColor": "",
        }
      }
    />
    <span
      className="emotion-4"
      disabled={true}
    >
      #
    </span>
  </div>
</div>
`;

exports[`ColorPreview Snapshots renders valid empty color input 1`] = `
.emotion-6 span {
  color: #494949;
}

.emotion-5 {
  position: relative;
}

.emotion-2 {
  display: inline-block;
  position: relative;
}

.emotion-1 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  border: 1px solid #7b858f;
  display: block;
  background-color: #ffffff;
  border-radius: 4px;
  box-sizing: border-box;
  height: 40px;
  min-width: 280px;
  -webkit-transition: 0.2s box-shadow,0.2s border-color;
  transition: 0.2s box-shadow,0.2s border-color;
  padding: 8px;
  box-sizing: border-box;
  padding-left: 46px;
  min-width: 116px;
  width: 116px;
  background-color: #f0f1f2;
  pointer-events: none;
}

.emotion-1::-webkit-input-placeholder {
  color: #5e6a75;
}

.emotion-1::-moz-placeholder {
  color: #5e6a75;
}

.emotion-1:-ms-input-placeholder {
  color: #5e6a75;
}

.emotion-1::placeholder {
  color: #5e6a75;
}

.emotion-1:hover {
  border-color: #333d47;
}

.emotion-1:focus:not([disabled]) {
  border-color: #0875e1;
  box-shadow: inset 0 0 0 1px #0875e1;
  outline: none;
}

.emotion-1:disabled {
  background-color: #f6f7f8;
  border-color: #b9c0c7;
  color: #a1aab3;
}

.emotion-1:disabled::-webkit-input-placeholder {
  color: #a1aab3;
}

.emotion-1:disabled::-moz-placeholder {
  color: #a1aab3;
}

.emotion-1:disabled:-ms-input-placeholder {
  color: #a1aab3;
}

.emotion-1:disabled::placeholder {
  color: #a1aab3;
}

.emotion-1:disabled {
  background-color: #ffffff;
  border-color: #ffffff;
  color: #494949;
}

.emotion-1:disabled::-webkit-input-placeholder {
  color: #494949;
}

.emotion-1:disabled::-moz-placeholder {
  color: #494949;
}

.emotion-1:disabled:-ms-input-placeholder {
  color: #494949;
}

.emotion-1:disabled::placeholder {
  color: #494949;
}

.emotion-3 {
  position: absolute;
  cursor: pointer;
  height: 20px;
  width: 20px;
  top: 0px;
  bottom: 0px;
  left: 8px;
  margin: auto;
  box-shadow: inset 0 0 0 1px rgba(0,0,0,0.25);
  pointer-events: none;
  border-radius: 2px;
}

.emotion-4 {
  position: absolute;
  left: 36px;
  top: 10px;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #5e6a75;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  color: #a1aab3;
}

<div
  className="emotion-6 emotion-7"
>
  <div
    className="emotion-5"
  >
    <div
      className="emotion-2"
    >
      <input
        className="emotion-0 emotion-1"
        disabled={true}
        maxLength={7}
        onChange={[Function]}
        placeholder="FFFFFF"
        spellCheck={false}
        type="text"
        value=""
      />
    </div>
    <div
      className="emotion-3"
      style={
        Object {
          "backgroundColor": "",
        }
      }
    />
    <span
      className="emotion-4"
      disabled={true}
    >
      #
    </span>
  </div>
</div>
`;

exports[`ColorPreview Snapshots renders with a selected color 1`] = `
.emotion-6 span {
  color: #494949;
}

.emotion-5 {
  position: relative;
}

.emotion-2 {
  display: inline-block;
  position: relative;
}

.emotion-1 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  border: 1px solid #7b858f;
  display: block;
  background-color: #ffffff;
  border-radius: 4px;
  box-sizing: border-box;
  height: 40px;
  min-width: 280px;
  -webkit-transition: 0.2s box-shadow,0.2s border-color;
  transition: 0.2s box-shadow,0.2s border-color;
  padding: 8px;
  box-sizing: border-box;
  padding-left: 46px;
  min-width: 116px;
  width: 116px;
  background-color: #f0f1f2;
  pointer-events: none;
}

.emotion-1::-webkit-input-placeholder {
  color: #5e6a75;
}

.emotion-1::-moz-placeholder {
  color: #5e6a75;
}

.emotion-1:-ms-input-placeholder {
  color: #5e6a75;
}

.emotion-1::placeholder {
  color: #5e6a75;
}

.emotion-1:hover {
  border-color: #333d47;
}

.emotion-1:focus:not([disabled]) {
  border-color: #0875e1;
  box-shadow: inset 0 0 0 1px #0875e1;
  outline: none;
}

.emotion-1:disabled {
  background-color: #f6f7f8;
  border-color: #b9c0c7;
  color: #a1aab3;
}

.emotion-1:disabled::-webkit-input-placeholder {
  color: #a1aab3;
}

.emotion-1:disabled::-moz-placeholder {
  color: #a1aab3;
}

.emotion-1:disabled:-ms-input-placeholder {
  color: #a1aab3;
}

.emotion-1:disabled::placeholder {
  color: #a1aab3;
}

.emotion-1:disabled {
  background-color: #ffffff;
  border-color: #ffffff;
  color: #494949;
}

.emotion-1:disabled::-webkit-input-placeholder {
  color: #494949;
}

.emotion-1:disabled::-moz-placeholder {
  color: #494949;
}

.emotion-1:disabled:-ms-input-placeholder {
  color: #494949;
}

.emotion-1:disabled::placeholder {
  color: #494949;
}

.emotion-3 {
  position: absolute;
  cursor: pointer;
  height: 20px;
  width: 20px;
  top: 0px;
  bottom: 0px;
  left: 8px;
  margin: auto;
  box-shadow: inset 0 0 0 1px rgba(0,0,0,0.25);
  pointer-events: none;
  border-radius: 2px;
}

.emotion-4 {
  position: absolute;
  left: 36px;
  top: 10px;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #5e6a75;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  color: #a1aab3;
}

<div
  className="emotion-6 emotion-7"
>
  <div
    className="emotion-5"
  >
    <div
      className="emotion-2"
    >
      <input
        className="emotion-0 emotion-1"
        disabled={true}
        maxLength={7}
        onChange={[Function]}
        placeholder="FFFFFF"
        spellCheck={false}
        type="text"
        value="e6e"
      />
    </div>
    <div
      className="emotion-3"
      style={
        Object {
          "backgroundColor": "#e6e",
        }
      }
    />
    <span
      className="emotion-4"
      disabled={true}
    >
      #
    </span>
  </div>
</div>
`;

exports[`ColorPreview Snapshots renders with a selected color without # 1`] = `
.emotion-6 span {
  color: #494949;
}

.emotion-5 {
  position: relative;
}

.emotion-2 {
  display: inline-block;
  position: relative;
}

.emotion-1 {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #494949;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  border: 1px solid #7b858f;
  display: block;
  background-color: #ffffff;
  border-radius: 4px;
  box-sizing: border-box;
  height: 40px;
  min-width: 280px;
  -webkit-transition: 0.2s box-shadow,0.2s border-color;
  transition: 0.2s box-shadow,0.2s border-color;
  padding: 8px;
  box-sizing: border-box;
  padding-left: 46px;
  min-width: 116px;
  width: 116px;
  background-color: #f0f1f2;
  pointer-events: none;
}

.emotion-1::-webkit-input-placeholder {
  color: #5e6a75;
}

.emotion-1::-moz-placeholder {
  color: #5e6a75;
}

.emotion-1:-ms-input-placeholder {
  color: #5e6a75;
}

.emotion-1::placeholder {
  color: #5e6a75;
}

.emotion-1:hover {
  border-color: #333d47;
}

.emotion-1:focus:not([disabled]) {
  border-color: #0875e1;
  box-shadow: inset 0 0 0 1px #0875e1;
  outline: none;
}

.emotion-1:disabled {
  background-color: #f6f7f8;
  border-color: #b9c0c7;
  color: #a1aab3;
}

.emotion-1:disabled::-webkit-input-placeholder {
  color: #a1aab3;
}

.emotion-1:disabled::-moz-placeholder {
  color: #a1aab3;
}

.emotion-1:disabled:-ms-input-placeholder {
  color: #a1aab3;
}

.emotion-1:disabled::placeholder {
  color: #a1aab3;
}

.emotion-1:disabled {
  background-color: #ffffff;
  border-color: #ffffff;
  color: #494949;
}

.emotion-1:disabled::-webkit-input-placeholder {
  color: #494949;
}

.emotion-1:disabled::-moz-placeholder {
  color: #494949;
}

.emotion-1:disabled:-ms-input-placeholder {
  color: #494949;
}

.emotion-1:disabled::placeholder {
  color: #494949;
}

.emotion-3 {
  position: absolute;
  cursor: pointer;
  height: 20px;
  width: 20px;
  top: 0px;
  bottom: 0px;
  left: 8px;
  margin: auto;
  box-shadow: inset 0 0 0 1px rgba(0,0,0,0.25);
  pointer-events: none;
  border-radius: 2px;
}

.emotion-4 {
  position: absolute;
  left: 36px;
  top: 10px;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: #5e6a75;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
  color: #a1aab3;
}

<div
  className="emotion-6 emotion-7"
>
  <div
    className="emotion-5"
  >
    <div
      className="emotion-2"
    >
      <input
        className="emotion-0 emotion-1"
        disabled={true}
        maxLength={7}
        onChange={[Function]}
        placeholder="FFFFFF"
        spellCheck={false}
        type="text"
        value="e6e"
      />
    </div>
    <div
      className="emotion-3"
      style={
        Object {
          "backgroundColor": "#e6e",
        }
      }
    />
    <span
      className="emotion-4"
      disabled={true}
    >
      #
    </span>
  </div>
</div>
`;
